# grid-vectorization

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: FindLIBIGL.cmake  IGSV.cmake
ext/: CMakeLists.txt
ext/CoMISo/: CMakeLists.txt  CMakeLists.txt.bak  VERSION
ext/CoMISo/Base/Config/: BaseDefines.hh
ext/CoMISo/Base/Debug/: DebConfig.hh  DebFile.cc  DebFile.hh  DebOut.hh  DebStream.cc  DebTime.hh
ext/CoMISo/Base/Progress/: ProgressNode.cc  ProgressNode.hh
ext/CoMISo/Base/Security/: Mandatory.hh
ext/CoMISo/Base/Test/: Checksum.cc  Checksum.hh  ChecksumCondition.cc  ChecksumCondition.hh  ChecksumDebugEvent.cc  ChecksumDebugEvent.hh  ChecksumFile.cc  ChecksumFile.hh  ChecksumIssueNumber.cc  ChecksumIssueNumber.hh  ChecksumNumberT.hh  TestResult.hh  types.hh
ext/CoMISo/Base/Utils/: BaseError.hh  BaseErrorInc.hh  Environment.hh  IOutputStream.cc  IOutputStream.hh  OStringStream.cc  OStringStream.hh
ext/CoMISo/NSolver/: COMISOSolver.cc  ConeConstraint.hh  ConstraintTools.hh  IPOPTCallbackParameters.hh  IPOPTProblemInstance.cc  IPOPTProblemInstance.hh  IPOPTSolver.cc  LinearConstraint.hh  LinearConstraintHandlerElimination.hh  LinearConstraintHandlerPenalty.hh  NPDerivativeChecker.hh  NPLinearConstraints.hh  NPLinearConstraintsT.cc  NPTiming.hh  NProblemGmmInterface.hh  NewtonSolver.cc  NewtonSolver.hh  SymmetricDirichletProblem.cc  SymmetricDirichletProblem.hh  TAOSolver.hh  TestInterface.hh
ext/CoMISo/Solver/: ConstrainedSolverT.cc  EigenLDLTSolverT.cc  Eigen_ToolsT.cc  GMM_Tools.hh  IterativeSolverT.hh  MISolver.cc
ext/CoMISo/Utils/: gmm.hh
ext/CoMISo/ext/gmm-5.4/: configure  configure.ac
ext/CoMISo/ext/gmm-5.4/include/gmm/: gmm_feedback_management.h
ext/alglib/: CMakeLists.txt
ext/simple_svg/: simple_svg_1.0.0.cpp  simple_svg_1.0.0.hpp
include/igsv/: igsv.h
include/igsv/common/: CornerType.h  CustomColors.h  FaceData.h  Options.h  VectorizationData.h  defs.h  print_timings.h
include/igsv/extraction/: assign_pixels_to_qedges.h  assign_samples_to_chains.h  connected_components.h  determine_chain_adjacency.h  exact_predicates.h  export_svg.h  extract_qedges.h  extract_qports.h  extract_qvertices.h  fit_chains.h  get_dir_as_complex.h  init_base_labels.h  init_chains.h  parametrize_chains.h  remove_short_chains.h  store_orientation.h
include/igsv/extraction_entities/: Bezier.h  Chain.h  Graph.h  LineSegment.h  Pixel.h  QEdge.h  QPort.h  QVertex.h  Sample.h
include/igsv/gui/: BaseGui.h  Entities.h  Gui.h
include/igsv/parametrization/: FrameFieldGenerator.h  IGMSolver.h  IGM_Elements.h  _cgal_delaunay_2.h  compute_constraints.h  compute_narrow_band.h  compute_scale.h  compute_snapping_weights.h  connect_triangles.h  custom_comb_frame_field.h  find_nearest.h  get_narrow_band_mesh.h  pix_coords_from_xy.h  process_uv.h  read_sketch.h  simplify_cut_graph.h  trace_streamlines.h  triangulate.h
src/: CMakeLists.txt  main.cpp
src/igsv/: CMakeLists.txt
src/igsv/common/: CustomColors.cpp  Options.cpp  VectorizationData.cpp  print_timings.cpp
src/igsv/extraction/: assign_pixels_to_qedges.cpp  assign_samples_to_chains.cpp  connected_components.cpp  determine_chain_adjacency.cpp  exact_predicates.cpp  export_svg.cpp  extract_qedges.cpp  extract_qports.cpp  extract_qvertices.cpp  fit_chains.cpp  get_dir_as_complex.cpp  init_base_labels.cpp  init_chains.cpp  parametrize_chains.cpp  remove_short_chains.cpp  store_orientation.cpp
src/igsv/extraction_entities/: Bezier.cpp  LineSegment.cpp
src/igsv/gui/: BaseGui.cpp  Gui.cpp  Gui__store_entities.cpp
src/igsv/gui2/: Gui.cpp  Gui.h  _main.cpp  colors.h  drawable.h
src/igsv/gui2/glsl/: lines.frag.glsl  lines.geom.glsl  lines.vert.glsl  mesh.frag.glsl  mesh.vert.glsl  points.frag.glsl  points.vert.glsl
src/igsv/parametrization/: FrameFieldGenerator.cpp  IGMSolver.cpp  compute_constraints.cpp  compute_narrow_band.cpp  compute_scale.cpp  compute_snapping_weights.cpp  connect_triangles.cpp  custom_comb_frame_field.cpp  find_nearest.cpp  get_narrow_band_mesh.cpp  pix_coords_from_xy.cpp  process_uv.cpp  read_sketch.cpp  simplify_cut_graph.cpp  trace_streamlines.cpp  triangulate.cpp
